--- a/idflakies.html
+++ b/idflakies.html
@@ -41,11 +41,9 @@
                                 <img src="images/PURE-poster.jpg" alt="">
                             </span>
                         </a>
-<p>
-                        Github Repository: <a href="http://github.com/idflakies/iDFlakies" target="_blank"> github.com/idflakies/iDFlakies </a>
-                    <p>
-                        iDFlakie Dataset: <a href="https://sites.google.com/view/flakytestdataset/" target="_blank"> sites.google.com/view/flakytestdataset/</a>
-                    <p>Wing's personal page: <a href="http://winglam2.web.engr.illinois.edu/" target="_blank">winglam2.web.engr.illinois.edu </a>
+                        Github Repository: <a href="http://github.com/idflakies/iDFlakies" target="_blank"> github.com/idflakies/iDFlakies </a></br>
+                        iDFlakie Dataset: <a href="https://sites.google.com/view/flakytestdataset/" target="_blank"> sites.google.com/view/flakytestdataset/</a></br>
+Wing's personal page: <a href="http://winglam2.web.engr.illinois.edu/" target="_blank">winglam2.web.engr.illinois.edu </a>
 
 
                 </div>
