--- a/me.html
+++ b/me.html
@@ -77,37 +77,19 @@
             <header class="major">
               <h3>I am a GEEK</h3>
             </header>
-            <p>I was born in Beijing Zhongguancun, "Silicon Valley in China". Influenced by both family and
-              environment, I have
-              unlimited enthusiasm for technology, especially for computer science.</br>
-              I graduated from Beijing Bayi School International Department, a place full of creativity and energetics.
-              Seizing every opportunity
-              to step closer to my dream, in high school, a tech club reviewing new digital products was founded by me;
-              I also led a team to participate in Diamond Challenge, a global business concept competition held by
-              University
-              of Delaware.
-              </br>
-              Now, I am studying in Computer Science at the University of Illinois at Urbana-Champaign. There are much
-              more chances to meet
-              with world-leading technology. Aiming to be a successful product manager in Artifical Intelligence field,
-              I
-              am highly motivated to learn from relative academic resources and be involved in various campus
-              activities.
-              </br>
-              I developed a messaging robot to response questions from incoming students automatically. With Special
-              Interest Group for
-              Artificial Intelligence in Association for Computing Machinery, I learned lots of AI concepts and was
-              planning
-              to start a road sign recognition project. In addition, I had an internship as a software testing engineer
-              at
-              HXT Semiconductor Technology in Summer 2018. </br>
-              Please visit Linkedin Page to see my professional experience and resume.</br>
-              <ul class="actions">
-                <li>
-                  <a href="https://www.linkedin.com/in/frankie-hao-yuan/" class="button" target="_blank">Linkedin</a>
-                  <a href="index.html#one" class="button">Projects</a>
-              </ul>
-          </div>
+            <p>
+                I was born in Beijing Zhongguancun, "Silicon Valley in China". Influenced by both family and
+                environment, I have
+                unlimited enthusiasm for technology.</br>
+                As a Computer Science undergraduate at the University of Illinois Urbana-Champaign, seizing every opportunity, I am actvively learning and participating in both researches and the industry.
+                </br>
+                <ul class="actions">
+                    <li>
+                        <a href="https://www.linkedin.com/in/frankie-hao-yuan/" class="button" target="_blank">Linkedin</a>
+
+                        <a href="index.html#one" class="button">Projects</a>
+                </ul>
+</div>
         </section>
         <section>
           <a class="image">
@@ -135,29 +117,27 @@
             <header class="major">
               <h3>I love this WORLD</h3>
             </header>
-            <p>"Life is like not to bold adventure, then nothing."</br>
-              Yes, I am challenging myself all the time. Besides Computer Science, there are much more fun roles to be
-              in this boring life.</br>
-              In high school, I was the stage manager of "Our Town" for Bulc Amard Drama Club; I was Art Editor and
-              Design Manager for
-              Survive Magazine; I was an English teacher at Immigrant Wenhua School...</br>
-              At University, even though I know nothing about art, I took Painting and World Music courses...</br>
-              What's NEXT? Idk, but I am ready for the NEXT.
-              <ul class="actions">
-                <li>
-                  <a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook">
-                    <span class="label">Facebook</span>
-                  </a>
-                <li>
-                  <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
-                    <span class="label">Weibo</span>
-                  </a>
-                <li>
-                  <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
-                    <span class="label">LinkedIn</span>
-                  </a>
-              </ul>
-          </div>
+            <p>
+                "Life is like not to bold adventure, then nothing."</br>
+                Yes, I am challenging myself all the time. Besides Computer Science, there are much more fun roles to be
+                in this boring life.</br>
+                I was the stage manager of "Our Town"; the Art Editor and Design Manager for Survive Magazine; an English teacher at Immigrant Wenhua School; the organizer of TEDxBeijingBayiHS;</br>
+                <b>What's NEXT? Idk, but I am ready for the NEXT.</b>
+                <ul class="actions">
+                    <li>
+                        <a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook">
+                            <span class="label">Facebook</span>
+                        </a>
+                    <li>
+                        <a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram">
+                            <span class="label">Weibo</span>
+                        </a>
+                    <li>
+                        <a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo">
+                            <span class="label">LinkedIn</span>
+                        </a>
+                </ul>
+</div>
         </section>
       </section>
       <!-- Two -->
