--- a/hyphoto/daily.html
+++ b/hyphoto/daily.html
@@ -53,6 +53,32 @@
                 <h2></h2>
                 <p>
             </article>
+                        <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/water3.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/sansui-1.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+                                    <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/water3.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/sansui-6.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+
+                                    <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/water3.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/sansui-7.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+
             <article class="thumb">
                 <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/linxue-1.jpg" class="image">
                     <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/linxue-1.jpg"
