--- a/hyphoto/daily.html
+++ b/hyphoto/daily.html
@@ -54,7 +54,7 @@
                 <p>
             </article>
                         <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/water3.jpg" class="image">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/sansui-1.jpg" class="image">
                     <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/sansui-1.jpg"
                          alt="">
                 </a>
@@ -62,7 +62,7 @@
                 <p>
             </article>
                                     <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/water3.jpg" class="image">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/sansui-6.jpg" class="image">
                     <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/sansui-6.jpg"
                          alt="">
                 </a>
@@ -71,7 +71,7 @@
             </article>
 
                                     <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/water3.jpg" class="image">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/sansui-7.jpg" class="image">
                     <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/sansui-7.jpg"
                          alt="">
                 </a>
