--- a/photo.html
+++ b/photo.html
@@ -63,25 +63,25 @@
                         <p></p>
                         <span class="image fit">
                             <a href="/hyphoto/jk.html">
-                                <img src="https://frankieyuan.com/images/jk.jpg" alt="">
+                                <img src="/images/jk.jpg" alt="">
                                 <h2>JK</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/lolita.html">
-                                <img src="https://frankieyuan.com/images/lolita.jpg" alt="">
+                            <a href="hyphoto/lolita.html">
+                                <img src="images/lolita.jpg" alt="">
                                 <h2>Lolita</h2>
                             </a>
                         </span>
                         <span class="image fit">
                             <a href="/hyphoto/daily.html">
-                                <img src="https://frankieyuan.com/images/daily.jpg" alt="">
+                                <img src="images/daily.jpg" alt="">
                                 <h2>Daily</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/cosplay.html">
-                                <img src="https://frankieyuan.com/images/cos.jpg" alt="">
+                            <a href="hyphoto/cosplay.html">
+                                <img src="images/cos.jpg" alt="">
                                 <h2>Cosplay</h2>
                             </a>
                         </span>
@@ -95,26 +95,26 @@
                         <p></p>
                         <span class="image fit">
                             <a href="hyphoto/lightfiredream.html">
-                                <img src="https://frankieyuan.com/images/disneyfirework.jpg"
+                                <img src="images/disneyfirework.jpg"
                                      alt="">
                                 <h2>Light, Fire, Dream</h2>
                             </a>
                         </span>
                         <span class="image fit">
                             <a href="hyphoto/horizon.html">
-                                <img src="https://frankieyuan.com/images/OrlandoSea.jpg" alt="">
+                                <img src="images/OrlandoSea.jpg" alt="">
                                 <h2>Near the Horizon</h2>
                             </a>
                         </span>
                         <span class="image fit">
                             <a href="hyphoto/city.html">
-                                <img src="https://frankieyuan.com/images/NYCbridges.jpg" alt="">
+                                <img src="images/NYCbridges.jpg" alt="">
                                 <h2>City in my Mind</h2>
                             </a>
                         </span>
                         <span class="image fit">
                             <a href="hyphoto/uncate.html">
-                                <img src="https://frankieyuan.com/images/airchina.jpg" alt="">
+                                <img src="images/airchina.jpg" alt="">
                                 <h2>Cannot be Categorized</h2>
                             </a>
                         </span>
