--- a/vpn/mac.html
+++ b/vpn/mac.html
@@ -73,6 +73,15 @@ https://frankieyuan.com/vpn/downloads/ShadowsocksX-NG.1.7.1.zip </br>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143014786-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-143014786-1');
+</script>
 
 	</body>
 </html>
