--- a/hyphoto/cosplay.html
+++ b/hyphoto/cosplay.html
@@ -115,6 +115,15 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/util.js"></script>
     <link rel="stylesheet" href="assets/css/main.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143014786-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-143014786-1');
+</script>
 
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css">
