--- a/vpn/mac.html
+++ b/vpn/mac.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>VPN配置教程</title>
-<meta charset="gbk">
+<title>VPN配置教程 - Mac</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="assets/css/main.css"><noscript>
 <link rel="stylesheet" href="assets/css/noscript.css"></noscript>
